--- a/Backend/LocalFindr/src/main/resources/application.properties
+++ b/Backend/LocalFindr/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=LocalFindr
+spring.datasource.url=jdbc:postgresql://localhost:5432/local_findr
+spring.datasource.username=${DB_username}
+spring.datasource.password=${DB_password}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
