--- a/Backend/LocalFindr/src/main/resources/application.properties
+++ b/Backend/LocalFindr/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=LocalFindr
 server.port=8080
 server.servlet.context-path=/
+spring.datasource.url=jdbc:postgresql://localhost:5432/local_findr
+spring.datasource.username=postgres
+spring.datasource.password=henvin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
