--- a/Backend/LocalFindr/src/main/resources/application.properties
+++ b/Backend/LocalFindr/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web.servlet=DEBUG
