--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,19 +20,21 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.3",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
+    "core-js": "^3.37.1",
     "dotenv": "^16.4.5",
     "expo": "^50.0.17",
     "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "expo-updates": "~0.24.13",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.2",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
@@ -40,8 +42,7 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6",
     "react-navigation-shared-element": "^3.1.3",
-    "react-redux": "^9.1.0",
-    "expo-linear-gradient": "~12.7.2"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
