--- a/Backend/LocalFindr/src/main/resources/application.properties
+++ b/Backend/LocalFindr/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.application.name=LocalFindr
-server.port=8080
-server.servlet.context-path=/
-spring.datasource.url=jdbc:postgresql://localhost:5432/local_findr
-spring.datasource.username=postgres
-spring.datasource.password=henvin
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.application.name=${APP_NAME}
+server.port=${APP_PORT}
+server.servlet.context-path=${PATH}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=${DRIVER_CLASS_NAME}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=${org.hibernate.dialect.PostgreSQLDialect}
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.servlet=DEBUG
