--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -33,6 +33,7 @@
     "react-native": "0.73.6",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.10.4",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-progress": "^5.0.1",
@@ -42,7 +43,8 @@
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.6",
     "react-navigation-shared-element": "^3.1.3",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
